--- a/templates/vanillajs-boilerplate/package.json
+++ b/templates/vanillajs-boilerplate/package.json
@@ -2,26 +2,17 @@
     "name": "<%= appNameSlug %>",
     "description": "<%= appDescription %>",
     "version": "<%= appVersion %>",
-    "homepage": "https://github.com/<%= userName %>/<%= appNameSlug %>",
+    "homepage": "https://github.com/<%= appUserName %>/<%= appNameSlug %>",
     "author": {
-        "name": "<%= authorName %>",
-        "email": "<%= authorEmail %>"
+        "name": "<%= appAuthorName %>",
+        "email": "<%= appAuthorEmail %>"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/<%= userName %>/<%= appNameSlug %>.git"
+        "url": "git://github.com/<%= appUserName %>/<%= appNameSlug %>.git"
     },
     "bugs": {
-        "url": "https://github.com/<%= userName %>/<%= appNameSlug %>/issues"
-    },
-    "licenses": [{
-        "type": "<%= license %>",
-        "url": "https://github.com/<%= userName %>/<%= appNameSlug %>/blob/master/LICENSE"
-    }],
-    "main": "slushfile.js",
-    "engines": {
-        "node": ">= 0.10.26",
-        "npm": ">=1.4.3"
+        "url": "https://github.com/<%= appUserName %>/<%= appNameSlug %>/issues"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
