--- a/templates/package.json
+++ b/templates/package.json
@@ -10,14 +10,13 @@
     "repository": {
         "type": "git",
         "url": "git://github.com/<%= appUserName %>/<%= appNameSlug %>.git"
-    },
+    },<% if (appGulp == true) { %>
+    "devDependencies": {
+        "gulp": "^3.6.2",<% if (appBoilerplate != "VanillaJS") { %>
+        "gulp-replace": "^0.3.0",<% } %>
+        "gulp-connect-multi": "^1.0.8"
+    },<% } %>
     "bugs": {
         "url": "https://github.com/<%= appUserName %>/<%= appNameSlug %>/issues"
-    },
-    "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-cli": "~0.1.9",
-        "grunt-contrib-connect": "~0.5.0",
-        "grunt-gh-pages": "~0.9.1"
     }
 }
