--- a/templates/package.json
+++ b/templates/package.json
@@ -1,22 +1,22 @@
 {
-    "name": "<%= appNameSlug %>",
-    "description": "<%= appDescription %>",
-    "version": "<%= appVersion %>",
-    "homepage": "https://github.com/<%= appUserName %>/<%= appNameSlug %>",
+    "name": "<%= repository %>",
+    "description": "<%= elementDescription %>",
+    "version": "<%= version %>",
+    "homepage": "https://github.com/<%= username %>/<%= repository %>",
     "author": {
-        "name": "<%= appAuthorName %>",
-        "email": "<%= appAuthorEmail %>"
+        "name": "<%= elementAuthorName %>",
+        "email": "<%= elementAuthorEmail %>"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/<%= appUserName %>/<%= appNameSlug %>.git"
-    },<% if (appGulp == true) { %>
+        "url": "git://github.com/<%= username %>/<%= repository %>.git"
+    },<% if (addGulpTasks == true) { %>
     "devDependencies": {
-        "gulp": "^3.6.2",<% if (appBoilerplate != "VanillaJS") { %>
+        "gulp": "^3.6.2",<% if (boilerplate != "VanillaJS") { %>
         "gulp-replace": "^0.3.0",<% } %>
         "gulp-connect-multi": "^1.0.8"
     },<% } %>
     "bugs": {
-        "url": "https://github.com/<%= appUserName %>/<%= appNameSlug %>/issues"
+        "url": "https://github.com/<%= username %>/<%= repository %>/issues"
     }
 }
