--- a/templates/x-tag-boilerplate/bower.json
+++ b/templates/x-tag-boilerplate/bower.json
@@ -1,9 +1,9 @@
 {
-    "name": "my-repo",
-    "version": "0.0.0",
-    "description": "My awesome Custom Element",
+    "name": "<%= repository %>",
+    "version": "<%= version %>",
+    "description": "<%= elementDescription %>",
     "license": "MIT",
-    "main": "dist/my-element.html",
+    "main": "src/<%= element %>.html",
     "keywords": [
         "x-tag",
         "web-components"
