--- a/templates/polymer-boilerplate/bower.json
+++ b/templates/polymer-boilerplate/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "<%= repository %>",
-    "version": "<%= version %>",
+    "version": "0.0.0",
     "description": "<%= elementDescription %>",
     "license": "MIT",
     "main": "src/<%= element %>.html",
@@ -14,6 +14,6 @@
         "bower_components"
     ],
     "dependencies": {
-        "polymer": "Polymer/polymer#~0.2.4"
+        "polymer": "Polymer/polymer#~0.3.3"
     }
 }
