--- a/templates/package.json
+++ b/templates/package.json
@@ -3,6 +3,8 @@
     "devDependencies": {
         "gulp": "^3.6.2",<% if (boilerplate != "VanillaJS") { %>
         "gulp-replace": "^0.3.0",<% } %>
-        "gulp-connect-multi": "^1.0.8"
+        "gulp-connect-multi": "^1.0.8",
+        "gulp-clean": "^0.3.1",
+        "gh-pages": "^0.2.0"
     }<% } %>
 }
