Rename repo references to "slush-element". Close #2

--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-    "name": "slush-custom-element",
+    "name": "slush-element",
     "description": "A slush generator of custom elements with Polymer, X-Tag or VannilaJS based in generator-element",
     "version": "0.1.21",
-    "homepage": "https://github.com/obetomuniz/slush-custom-element",
+    "homepage": "https://github.com/obetomuniz/slush-element",
     "author": {
         "name": "Beto Muniz",
         "email": "contato@betomuniz.com"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/obetomuniz/slush-custom-element.git"
+        "url": "git://github.com/obetomuniz/slush-element.git"
     },
     "bugs": {
-        "url": "https://github.com/obetomuniz/slush-custom-element/issues"
+        "url": "https://github.com/obetomuniz/slush-element/issues"
     },
     "licenses": [{
         "type": "MIT",
-        "url": "https://github.com/obetomuniz/slush-custom-element/blob/master/LICENSE"
+        "url": "https://github.com/obetomuniz/slush-element/blob/master/LICENSE"
     }],
     "main": "slushfile.js",
     "dependencies": {
