--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-    "name": "slush-element",
-    "description": "A slush generator of custom elements with Polymer, X-Tag or VannilaJS based in generator-element",
-    "version": "0.1.23",
-    "homepage": "https://github.com/webcomponents/slush-element",
-    "author": {
-        "name": "Beto Muniz",
-        "email": "contato@betomuniz.com"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/webcomponents/slush-element.git"
-    },
-    "bugs": {
-        "url": "https://github.com/webcomponents/slush-element/issues"
-    },
-    "licenses": [{
-        "type": "MIT",
-        "url": "https://github.com/webcomponents/slush-element/blob/master/LICENSE"
-    }],
-    "main": "slushfile.js",
-    "dependencies": {
-        "gulp": "^3.6.2",
-        "gulp-template": "^0.1.1",
-        "gulp-install": "^0.1.4",
-        "gulp-conflict": "^0.1.1",
-        "gulp-rename": "^1.2.0",
-        "underscore.string": "^2.3.3",
-        "inquirer": "^0.5.1"
-    },
-    "keywords": [
-        "slushgenerator",
-        "webcomponents",
-        "web-components",
-        "web components",
-        "custom-elements",
-        "custom elements",
-        "polymer",
-        "x-tag",
-        "gulp"
-    ]
+  "name": "slush-element",
+  "description": "A slush generator of custom elements with Polymer, X-Tag or VannilaJS based in generator-element",
+  "version": "0.1.23",
+  "homepage": "https://github.com/webcomponents/slush-element",
+  "author": {
+    "name": "Beto Muniz",
+    "email": "contato@betomuniz.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/webcomponents/slush-element.git"
+  },
+  "bugs": {
+    "url": "https://github.com/webcomponents/slush-element/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/webcomponents/slush-element/blob/master/LICENSE"
+    }
+  ],
+  "main": "slushfile.js",
+  "dependencies": {
+    "gulp": "^3.6.2",
+    "gulp-conflict": "^0.1.1",
+    "gulp-install": "^0.1.4",
+    "gulp-rename": "^1.2.0",
+    "gulp-template": "^0.1.2",
+    "inquirer": "^0.5.1",
+    "underscore.string": "^2.3.3"
+  },
+  "keywords": [
+    "slushgenerator",
+    "webcomponents",
+    "web-components",
+    "web components",
+    "custom-elements",
+    "custom elements",
+    "polymer",
+    "x-tag",
+    "gulp"
+  ]
 }
