--- a/templates/polymer-boilerplate/bower.json
+++ b/templates/polymer-boilerplate/bower.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "description": "<%= elementDescription %>",
     "license": "MIT",
-    "main": "src/<%= elementName %>.html",
+    "main": "dist/<%= elementName %>.html",
     "keywords": [
         "polymer",
         "web-components"
@@ -14,6 +14,6 @@
         "bower_components"
     ],
     "dependencies": {
-        "polymer": "Polymer/polymer#^0.5.0"
+        "polymer": "Polymer/polymer#^0.5.1"
     }
 }
