--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "gulp"
   ],
   "devDependencies": {
+    "mocha": "^3.1.0",
     "mock-gulp-dest": "^0.1.1",
-    "mocha": "*"
+    "mockirer": "^2.0.0"
   }
 }
