--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     }
   ],
   "scripts": {
-    "test": "mocha --reporter spec"
+    "test": "NODE_ENV=test mocha -R spec test/*.js"
   },
   "main": "slushfile.js",
   "dependencies": {
-    "gulp": "3.9.1",
+    "gulp": "^3.9.1",
     "gulp-conflict": "^0.4.0",
-    "gulp-install": "0.6.0",
-    "gulp-rename": "1.2.2",
-    "gulp-template": "4.0.0",
-    "inquirer": "1.2.1",
-    "mocha": "3.1.0",
-    "underscore.string": "3.3.4"
+    "gulp-install": "^0.6.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-template": "^4.0.0",
+    "inquirer": "^1.2.2",
+    "mocha": "^3.1.2",
+    "underscore.string": "^3.3.4"
   },
   "keywords": [
     "slushgenerator",
